--- a/STM32F746G_DISCO.ioc
+++ b/STM32F746G_DISCO.ioc
@@ -322,13 +322,8 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=QSPI_NCS [N25Q128A13EF840E_S]
 PB6.Locked=true
 PB6.Signal=QUADSPI_BK1_NCS
-PB7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PB7.GPIO_Label=VCP_RX [STM32F103CBT6_PA2]
-PB7.GPIO_Mode=GPIO_MODE_AF_PP
-PB7.GPIO_PuPd=GPIO_NOPULL
-PB7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB7.Locked=true
-PB7.Signal=USART1_RX
+PB7.Signal=GPIO_Output
 PB8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB8.GPIO_Label=ARDUINO SCL/D15
 PB8.GPIO_Mode=GPIO_MODE_AF_OD
@@ -752,13 +747,8 @@ PI0.GPIO_PuPd=GPIO_NOPULL
 PI0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PI0.Locked=true
 PI0.Signal=S_TIM5_CH4
-PI1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
-PI1.GPIO_Label=ARDUINO SCK/D13
-PI1.GPIO_Mode=GPIO_MODE_AF_PP
-PI1.GPIO_PuPd=GPIO_NOPULL
-PI1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PI1.Locked=true
-PI1.Signal=SPI2_SCK
+PI1.Signal=GPIO_Output
 PI10.GPIOParameters=GPIO_Label
 PI10.GPIO_Label=LCD_HSYNC [RK043FN48H-CT672B_HSYNC]
 PI10.Locked=true
